--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -2,7 +2,7 @@ name: 'Pull Request'
 
 on:
   pull_request:
-    branches: [ develop ]
+    branches: [develop]
     types: [opened, reopened, closed]
 
 jobs:
@@ -11,48 +11,42 @@ jobs:
 
     env:
       STATUS_COLOR: ''
-      SECTION_CONTENT: '
-                |
+      SECTION_CONTENT: |
+        -
+          activityTitle:
+          activitySubtitle:
+          facts:
             -
-              activityTitle:
-              activitySubtitle:
-              facts:
-                -
-                  name: "Repo:"
-                  value: ${{ github.repository }}
-                -
-                  name: "Source branch:"
-                  value: ${{ github.head_ref }}
-                -
-                  name: "Target branch:"
-                  value: ${{ github.base_ref }}
-                -
-                  name: "Author:"
-                  value: ${{ github.triggering_actor }}
-                -
-                  name: "PR #:"
-                  value: ${{ github.event.pull_request.number }}
-                -
-                  name: "Review status:"
-                  value: "${{ github.event.pull_request_review.state }}"
-                -
-                  name: "Commits in this PR:"
-                  value: ${{ github.event.pull_request.commits }}
-        '
-      MESSAGE_CONTENT: '
-              |
-            status:
-            <span style="color:#ffffff;background-color:#${{ env.STATUS_COLOR }};padding:3px;">
-              ${{ github.event.pull_request.state }}
-            </span>
-            <hr style="height:2px;margin-top:7px;noshade;
-            background-color:#${{ env.STATUS_COLOR }};">
-        '
-      BUTTONS_CONTENT: '
-              |
-            View Pull Request ${{ github.event.pull_request._links.html.href }}
-            View org Project https://github.com/orgs/uic-ts/projects/1
-        '
+              name: "Repo:"
+              value: ${{ github.repository }}
+            -
+              name: "Source branch:"
+              value: ${{ github.head_ref }}
+            -
+              name: "Target branch:"
+              value: ${{ github.base_ref }}
+            -
+              name: "Author:"
+              value: ${{ github.triggering_actor }}
+            -
+              name: "PR #:"
+              value: ${{ github.event.pull_request.number }}
+            -
+              name: "Review status:"
+              value: "${{ github.event.pull_request_review.state }}"
+            -
+              name: "Commits in this PR:"
+              value: ${{ github.event.pull_request.commits }}
+      MESSAGE_CONTENT: |
+        status:
+        <span style="color:#ffffff;background-color:#${{ env.STATUS_COLOR }};padding:3px;">
+          ${{ github.event.pull_request.state }}
+        </span>
+        <hr style="height:2px;margin-top:7px;noshade;
+        background-color:#${{ env.STATUS_COLOR }};">
+      BUTTONS_CONTENT: |
+        View Pull Request ${{ github.event.pull_request._links.html.href }}
+        View org Project https://github.com/orgs/uic-ts/projects/1
 
 
     steps:
@@ -72,38 +66,35 @@ jobs:
           fi
 
       - name: 📣 Send teams notification for OPENED pull request
-        if: ${{ github.event.pull_request.state }} == open
+        if: ${{ github.event.pull_request.state }} == 'open'
         uses: simbo/msteams-message-card-action@latest
         with:
           title: "OPEN"
           webhook: ${{ secrets.TEAMS_WEBHOOK_URL }}
           color: ${{ env.STATUS_COLOR }}
-          message: $ {{ env.MESSAGE_CONTENT }}
+          message: ${{ env.MESSAGE_CONTENT }}
           buttons: ${{ env.BUTTONS_CONTENT }}
           sections: ${{ env.SECTION_CONTENT }}
 
 
       - name: 📣 Send teams notification for CLOSED pull request
-        if: ${{ github.event.pull_request.state }} == closed
+        if: ${{ github.event.pull_request.state }} == 'closed'
         uses: simbo/msteams-message-card-action@latest
         with:
           title: "CLOSED"
           webhook: ${{ secrets.TEAMS_WEBHOOK_URL }}
           color: ${{ env.STATUS_COLOR }}
-          message: $ {{ env.MESSAGE_CONTENT }}
+          message: ${{ env.MESSAGE_CONTENT }}
           buttons: ${{ env.BUTTONS_CONTENT }}
           sections: ${{ env.SECTION_CONTENT }}
 
 
       - name: 📣 Send teams notification for MERGED pull request
-        if: ${{ github.event.pull_request.merged }} == true
+        if: ${{ github.event.pull_request.merged }}
         uses: simbo/msteams-message-card-action@latest
         with:
           title: "MERGED"
           webhook: ${{ secrets.TEAMS_WEBHOOK_URL }}
           color: ${{ env.STATUS_COLOR }}
-          message: $ {{ env.MESSAGE_CONTENT }}
-          buttons: ${{ env.BUTTONS_CONTENT }}
-          sections: ${{ env.SECTION_CONTENT }}
-
-
+          message: ${{ env.MESSAGE_CONTENT }}
+          buttons: ${{ env.BUTTON
