--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -29,7 +29,7 @@ jobs:
 
 
       - name: 📣 Send teams notification for OPENED pull request
-        if: github.event.pull_request.state == open
+        if: github.event.pull_request.state == 'open'
         uses: simbo/msteams-message-card-action@latest
         with:
           webhook: ${{ secrets.TEAMS_WEBHOOK_URL }}
@@ -76,7 +76,7 @@ jobs:
 
 
       - name: 📣 Send teams notification for CLOSED pull request
-        if: github.event.pull_request.state == closed
+        if: github.event.pull_request.state == 'closed'
         uses: simbo/msteams-message-card-action@latest
         with:
           webhook: ${{ secrets.TEAMS_WEBHOOK_URL }}
@@ -124,7 +124,7 @@ jobs:
 
 
       - name: 📣 Send teams notification for MERGED pull request
-        if: github.event.pull_request.merged == true
+        if: github.event.pull_request.merged == 'true'
         uses: simbo/msteams-message-card-action@latest
         with:
           webhook: ${{ secrets.TEAMS_WEBHOOK_URL }}
