--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -16,7 +16,7 @@ jobs:
             echo "STATUS_COLOR=019128" >> $GITHUB_ENV
             echo "GREEN"
           fi
-          if [[ "${{ github.event.pull_request.state }}" == "closed" && github.event.pull_request.merged == false]]; then
+          if [[ "${{ github.event.pull_request.state }}" == "closed" && "${{ github.event.pull_request.merged }}" == false ]]; then
             echo "STATUS_COLOR=ad020a" >> $GITHUB_ENV
             echo "RED"
           fi
@@ -70,7 +70,6 @@ jobs:
                 -
                   name: "Commits in this PR:"
                   value: ${{ github.event.pull_request.commits }}
-
 
       - name: Send teams notification for ⭐CLOSED⭐ pull request
         if: github.event.pull_request.state == 'closed' && github.event.pull_request.merged == false
