--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -20,7 +20,7 @@ jobs:
             echo "STATUS_COLOR=ad020a" >> $GITHUB_ENV
             echo "RED"
           fi
-          if [[ "${{ github.event.pull_request.merged }}" == "true" ]]; then
+          if [[ "${{ github.event.pull_request.merged }}" == true ]]; then
             echo "STATUS_COLOR=5a00ba" >> $GITHUB_ENV
             echo "PURPLE"
           fi
@@ -118,7 +118,7 @@ jobs:
 
 
       - name: Send teams notification for ⭐MERGED⭐ pull request
-        if: github.event.pull_request.merged == 'true'
+        if: github.event.pull_request.merged == true
         uses: simbo/msteams-message-card-action@latest
         with:
           webhook: ${{ secrets.SDD_TEAMS_WEBHOOK_URL }}
