--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -16,15 +16,14 @@ jobs:
             echo "STATUS_COLOR=019128" >> $GITHUB_ENV
             echo "GREEN"
           fi
-          if [[ "${{ github.event.pull_request.state }}" == "closed" && github.event.pull_request.merged == false ]]; then
-            echo "STATUS_COLOR=ad020a" >> $GITHUB_ENV
-            echo "RED"
-          fi
           if [[ "${{ github.event.pull_request.merged }}" == true ]]; then
             echo "STATUS_COLOR=5a00ba" >> $GITHUB_ENV
             echo "PURPLE"
           fi
-
+          elseif [[ "${{ github.event.pull_request.merged == false && github.event.pull_request.state }}" == "closed"]]; then
+            echo "STATUS_COLOR=ad020a" >> $GITHUB_ENV
+            echo "RED"
+          fi
 
 
       - name: Send teams notification for ⭐OPENED⭐ pull request
