--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -15,12 +15,10 @@ jobs:
           if [[ "${{ github.event.pull_request.state }}" == "open" ]]; then
             echo "STATUS_COLOR=019128" >> $GITHUB_ENV
             echo "GREEN"
-          fi
-          if [[ "${{ github.event.pull_request.merged }}" == true ]]; then
+          elif [[ "${{ github.event.pull_request.merged }}" == true ]]; then
             echo "STATUS_COLOR=5a00ba" >> $GITHUB_ENV
             echo "PURPLE"
-          fi
-          elif [[ "${{ github.event.pull_request.merged" == false && github.event.pull_request.state == "closed" ]]; then
+          else
             echo "STATUS_COLOR=ad020a" >> $GITHUB_ENV
             echo "RED"
           fi
