--- a/.github/workflows/accessibility.yml
+++ b/.github/workflows/accessibility.yml
@@ -14,4 +14,5 @@ jobs:
       - name: Install dependencies
         run: npm install axe-core
       - name: Run Axe-core
-        run: npx axe ${{ github.event.pull_request.head.ref }}
+        run: node_modules/axe-core/bin/axe ${{ github.event.pull_request.head.ref }}
+
