--- a/.github/workflows/accessibility.yml
+++ b/.github/workflows/accessibility.yml
@@ -18,4 +18,5 @@ jobs:
       - name: Make axe executable
         run: chmod +x node_modules/axe-core/bin/axe
       - name: Run Axe-core
-        run: node_modules/axe-core/bin/axe ${{ github.event.pull_request.head.ref }}
+        run: npx axe ${{ github.event.pull_request.head.ref }}
+
