--- a/.github/workflows/accessibility.yml
+++ b/.github/workflows/accessibility.yml
@@ -15,6 +15,8 @@ jobs:
           node-version: 16
       - name: Install dependencies
         run: npm install axe-core
+      - name: Reinstall package
+        run: rm -rf node_modules && npm install
       - name: Make axe executable
         run: chmod +x node_modules/axe-core/bin/axe
       - name: Run Axe-core
