--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 *.framework filter=lfs diff=lfs merge=lfs -text
+node_modules/puppeteer/.local-chromium/mac-869685/chrome-mac/Chromium.app/Contents/Frameworks/Chromium[[:space:]]Framework.framework/Versions/91.0.4469.0/Chromium[[:space:]]Framework filter=lfs diff=lfs merge=lfs -text
