--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "devDependencies": {
     "gh-pages": "^5.0.0",
     "pa11y-ci": "^3.0.1"
+  },
+  "scripts": {
+    "deploy": "gh-pages -d build"
   }
 }
