--- a/deploy-preview.yml
+++ b/deploy-preview.yml
@@ -1,25 +1,30 @@
 name: Deploy Preview
 
 on:
-  pull_request:
-    types: [opened, synchronize]
+  pull_request_target:
+    types: [opened, reopened, synchronize]
 
 env:
   PREVIEW_URL: https://kokimo1.github.io/webhook-test/${{ github.event.pull_request.number }}
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
+      with:
+        ref: ${{ github.event.pull_request.head.ref }}
+
+    - name: Install dependencies
+      run: npm ci
+
+    - name: Run linter
+      run: npm run lint -- --onlyChanged
 
     - name: Build and deploy
-      run: |
-        # Build application here
-        npm run build
-        npm run build && npm run deploy
+      run: npm run build && npm run deploy
 
     - name: Set preview URL
       run: echo "PREVIEW_URL=${PREVIEW_URL}" >> $GITHUB_ENV
