--- a/.github/workflows/accessibility.yml
+++ b/.github/workflows/accessibility.yml
@@ -14,7 +14,9 @@ jobs:
         with:
           node-version: 16
       - name: Install dependencies
-        run: npm install
+        run: |
+          npm install
+          node node_modules/puppeteer/install.js
       - name: Run pa11y-ci
         env:
           GITHUB_TOKEN: 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
