--- a/.github/workflows/accessibility.yml
+++ b/.github/workflows/accessibility.yml
@@ -4,6 +4,9 @@ on:
   pull_request:
     types: [opened, synchronize]
 
+env:
+  GITHUB_TOKEN: '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'
+
 jobs:
   accessibility:
     runs-on: ubuntu-latest
@@ -18,6 +21,4 @@ jobs:
           npm install
           node node_modules/puppeteer/install.js
       - name: Run pa11y-ci
-        env:
-          GITHUB_TOKEN: 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
         run: npx pa11y-ci --config=.pa11yci.json --json > results.json && gh pr comment ${{ github.event.pull_request.number }} --body "$(cat results.json)"
