--- a/.github/workflows/accessibility.yml
+++ b/.github/workflows/accessibility.yml
@@ -21,4 +21,11 @@ jobs:
           npm install
           node node_modules/puppeteer/install.js
       - name: Run pa11y-ci
-        run: npx pa11y-ci --config=.pa11yci.json --json > results.json && gh pr comment ${{ github.event.pull_request.number }} --body "$(cat results.json)"
+        run: npx pa11y-ci --config=.pa11yci.json --json > results.json
+      - name: Check if results.json exists and is not empty
+        run: |
+          if [ -s "results.json" ]; then
+            gh pr comment ${{ github.event.pull_request.number }} --body "$(cat results.json)"
+          else
+            echo "Error: results.json is empty or does not exist"
+          fi
