--- a/.github/workflows/accessibility.yml
+++ b/.github/workflows/accessibility.yml
@@ -32,6 +32,8 @@ jobs:
         run: ls -al
       - name: Show path
         run: pwd
+      - name: Set file permissions
+        run: chmod +r results.json
       - name: Check if results.json exists and is not empty
         run: |
           if [ -s "results.json" ]; then
