--- a/.github/workflows/accessibility.yml
+++ b/.github/workflows/accessibility.yml
@@ -33,10 +33,10 @@ jobs:
       - name: Show path
         run: pwd
       - name: Set file permissions
-        run: chmod +r results.json
+        run: chmod 777 results.json
       - name: Check if results.json exists and is not empty
         run: |
-          if [ "results.json" ]; then
+          if [ -s "results.json" ]; then
             gh pr comment ${{ github.event.pull_request.number }} --body "$(cat results.json)"
           else
             echo "Error: results.json is empty or does not exist. Also, this should be the PR number: ${{ github.event.pull_request.number }}."
