--- a/.github/workflows/accessibility.yml
+++ b/.github/workflows/accessibility.yml
@@ -12,12 +12,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          node-version: 16
       - name: Cache node modules
         uses: actions/cache@v2
         with:
           path: ~/.npm
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: ${{ runner.os }}-node-
+          node-version: 16
       - name: Install Node.js
         uses: actions/setup-node@v2
         with:
