--- a/deploy-preview.yml
+++ b/deploy-preview.yml
@@ -13,10 +13,10 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v2
       with:
         ref: ${{ github.event.pull_request.head.ref }}
-
+        node-version: 16
     - name: Install dependencies
       run: npm ci
 
