--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -20,11 +20,15 @@ jobs:
     - name: Install dependencies
       run: npm ci
 
-    - name: Run linter
-      run: npm run lint -- --onlyChanged
+    - name: Build website
+      run: npm run build
 
-    - name: Build and deploy
-      run: npm run build && npm run deploy
+    - name: Deploy website
+      uses: JamesIves/github-pages-deploy-action@4.1.3
+      with:
+        branch: gh-pages
+        folder: build
+        cleanup: false
 
     - name: Set preview URL
       run: echo "PREVIEW_URL=${PREVIEW_URL}" >> $GITHUB_ENV
